# gen-dataset

./: CMakeLists.txt  README.md
include/: gen-dataset.hpp
sources/: gen-dataset.cpp  main.cpp
